sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:8: error: not found: value lgr
      while (i + eca < lgr) {
                       ^